--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-wood-duck",
-  "version": "0.1.69",
+  "version": "0.1.70",
   "description": "The CWDS component library (react-wood-duck) is for all CWDS digital service teams to contribute to and use in order to provide a consistent look, feel, and behavior for the overall CWDS application.",
   "repository": {
     "type": "git",
@@ -31,61 +31,62 @@
     "storybook:deploy": "storybook-to-ghpages"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.11",
-    "@storybook/addon-info": "^3.2.12",
-    "@storybook/addon-links": "^3.2.10",
-    "@storybook/react": "^3.2.11",
-    "@storybook/storybook-deployer": "^2.0.0",
+    "@storybook/addon-actions": "^3.4.7",
+    "@storybook/addon-info": "^3.4.7",
+    "@storybook/addon-links": "^3.4.7",
+    "@storybook/react": "^3.4.7",
+    "@storybook/storybook-deployer": "^2.3.0",
     "babel-cli": "^6.6.4",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.5.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.1",
-    "eslint": "^4.8.0",
+    "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.6.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-babel": "^3.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jasmine": "^2.9.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "file-loader": "^1.1.0",
-    "jasmine": "^2.7.0",
-    "jasmine-core": "^2.7.0",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-standard": "^3.1.0",
+    "file-loader": "^1.1.11",
+    "jasmine": "^2.99.0",
+    "jasmine-core": "^2.99.1",
     "jsdom": "^8.1.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
+    "karma-webpack": "^2.0.13",
     "mocha": "^2.4.5",
-    "nodemon": "^1.9.1",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.17.5",
     "path": "^0.12.7",
-    "prettierrc": "^0.0.0-5",
+    "prettierrc": "0.0.0",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
     "sinon": "^1.17.3",
-    "source-map-loader": "^0.2.1",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.2"
   },
   "peerDependencies": {
     "react": "~0.14.8 || ^15.0.0",
@@ -94,17 +95,16 @@
   "dependencies": {
     "babel-runtime": "^6.6.1",
     "bootstrap": "^3.3.7",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "copyfiles": "^1.2.0",
     "moment": "2.21.0",
-    "node-sass": "^4.5.3",
-    "prettier": "^1.7.4",
-    "prop-types": "^15.6.0",
+    "prettier": "^1.13.5",
+    "prop-types": "^15.6.1",
     "react-autosuggest": "^9.3.2",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.3.1",
-    "react-datetime": "^2.9.0",
+    "react-datetime": "^2.14.0",
     "react-overlays": "^0.8.3",
-    "react-select": "^1.0.0-rc.5"
+    "react-select": "^1.2.1"
   }
 }
